fix(style): Vertically center button text on mobile
- Mobile browser seems to slightly offset button texts in some places. This fixes that

--- a/frontend/src/components/PlanAMesocycle/PlanAMesocycle.module.css
+++ b/frontend/src/components/PlanAMesocycle/PlanAMesocycle.module.css
@@ -294,6 +294,9 @@
         width: 150px;
         height: 30px;
         font-size: 0.7rem;
+        /* To fix mobile browser quirk: slightly offsets button text to bottom */
+        display: flex;
+        align-items: center;
     }
 
     .mesoname_div label, .numweeks_div label {
